name:               message-index
version:            0.1.0.0
build-type:         Simple
cabal-version:      2.0

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , commonmark >= 0.2.2
                  , filepath ^>= 1.4
                  , microlens ^>= 0.4.12
                  , binary ^>= 0.8.8
                  , aeson ^>= 2.0.3
                  , pandoc-types ^>= 1.22
                  , containers ^>= 0.6
                  , text ^>= 1.2
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
