cabal-version:      3.0

name:                salad
version:             0.0.1
license:             MIT
author:              Jappie
maintainer:          hi@jappie.me
build-type:          Simple

library
  exposed-modules:  Salad
  build-depends:       base, fruits, vegetables
  default-language:    Haskell2010
